--- a/static/css/layout/asia.css
+++ b/static/css/layout/asia.css
@@ -1,4 +1,8 @@
 @media screen and (min-width: 600px) {
+  p {
+    font-size: 1.6em;
+  }
+
   .destination h2 {
     float: left;
     font-size: 4em;
