Changed menu CSS

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -80,34 +80,30 @@ input {
   width: 100%;
 }
 
+nav {
+  margin: auto;
+}
+
 nav ul {
-  min-width: 350px;
   position: relative;
+  padding-right: 1em;
 }
 
 nav li {
-  display: inline;
+  display: inline-block;
   list-style: none;
   text-align: center;
   padding-top: 12px;
-  width: 25%;
-  min-width: 60px;
+  width: 90px;
   background-color: #B3DFB3;
-  position: absolute;
   height: 40px;
   font-size: 1.3333em;
   border-radius: 5px;
+  margin-left: .5em;
 }
 
 nav li:hover {
   background-color: #A4B4C7;
-}
-
-nav li:first-child {
-  left: 20%;
-}
-nav li:last-child {
-  right: 20%;
 }
 
 nav li a {
